@@ -2378,6 +2378,14 @@ literal|"num_i"
 argument_list|,
 literal|"num_l"
 argument_list|,
+literal|"num_is"
+argument_list|,
+literal|"num_ls"
+argument_list|,
+literal|"num_fs"
+argument_list|,
+literal|"num_ds"
+argument_list|,
 literal|"super_s"
 argument_list|,
 literal|"super_ss"
@@ -2492,6 +2500,14 @@ literal|"num_i"
 argument_list|,
 literal|"num_id"
 argument_list|,
+literal|"num_is"
+argument_list|,
+literal|"num_lds"
+argument_list|,
+literal|"num_fs"
+argument_list|,
+literal|"num_dds"
+argument_list|,
 literal|"super_s"
 argument_list|,
 literal|"super_sd"
@@ -2554,6 +2570,14 @@ literal|"num_i"
 argument_list|,
 literal|"num_i"
 argument_list|,
+literal|"num_is"
+argument_list|,
+literal|"num_ids"
+argument_list|,
+literal|"num_fs"
+argument_list|,
+literal|"num_fds"
+argument_list|,
 literal|"super_s"
 argument_list|,
 literal|"super_sds"
@@ -2615,6 +2639,14 @@ literal|"num_i"
 argument_list|,
 literal|"num_i"
 argument_list|,
+literal|"num_is"
+argument_list|,
+literal|"num_ids"
+argument_list|,
+literal|"num_fs"
+argument_list|,
+literal|"num_fds"
+argument_list|,
 literal|"super_s"
 argument_list|,
 literal|"super_sds"
@@ -2669,6 +2701,46 @@ literal|"num_i"
 argument_list|)
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|p
+operator|.
+name|get
+argument_list|(
+literal|"num_is"
+argument_list|)
+operator|==
+literal|null
+condition|)
+name|p
+operator|.
+name|add
+argument_list|(
+literal|"num_is"
+argument_list|,
+literal|"num_is"
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|p
+operator|.
+name|get
+argument_list|(
+literal|"num_fs"
+argument_list|)
+operator|==
+literal|null
+condition|)
+name|p
+operator|.
+name|add
+argument_list|(
+literal|"num_fs"
+argument_list|,
+literal|"num_fs"
+argument_list|)
+expr_stmt|;
 name|MacroExpander
 name|m
 init|=
@@ -2719,6 +2791,26 @@ operator|.
 name|expand
 argument_list|(
 literal|"${num_i}"
+argument_list|)
+decl_stmt|;
+name|String
+name|num_is
+init|=
+name|m
+operator|.
+name|expand
+argument_list|(
+literal|"${num_is}"
+argument_list|)
+decl_stmt|;
+name|String
+name|num_fs
+init|=
+name|m
+operator|.
+name|expand
+argument_list|(
+literal|"${num_fs}"
 argument_list|)
 decl_stmt|;
 name|String
@@ -2815,6 +2907,22 @@ name|num_i
 argument_list|,
 literal|"2"
 argument_list|,
+name|num_is
+argument_list|,
+literal|"2"
+argument_list|,
+name|num_is
+argument_list|,
+literal|"-5"
+argument_list|,
+name|num_fs
+argument_list|,
+literal|"2"
+argument_list|,
+name|num_fs
+argument_list|,
+literal|"-5"
+argument_list|,
 name|super_s
 argument_list|,
 literal|"zodiac"
@@ -2885,6 +2993,22 @@ argument_list|,
 name|num_i
 argument_list|,
 literal|"-5"
+argument_list|,
+name|num_is
+argument_list|,
+literal|"3"
+argument_list|,
+name|num_is
+argument_list|,
+literal|"-1"
+argument_list|,
+name|num_fs
+argument_list|,
+literal|"3"
+argument_list|,
+name|num_fs
+argument_list|,
+literal|"-1.5"
 argument_list|,
 name|super_s
 argument_list|,
@@ -2959,6 +3083,22 @@ name|num_i
 argument_list|,
 literal|"3"
 argument_list|,
+name|num_is
+argument_list|,
+literal|"0"
+argument_list|,
+name|num_is
+argument_list|,
+literal|"3"
+argument_list|,
+name|num_fs
+argument_list|,
+literal|"0"
+argument_list|,
+name|num_fs
+argument_list|,
+literal|"3"
+argument_list|,
 name|super_s
 argument_list|,
 literal|"spiderman"
@@ -3008,6 +3148,14 @@ argument_list|,
 name|num_i
 argument_list|,
 literal|"7"
+argument_list|,
+name|num_is
+argument_list|,
+literal|"0"
+argument_list|,
+name|num_fs
+argument_list|,
+literal|"0"
 argument_list|,
 name|super_s
 argument_list|,
@@ -3059,6 +3207,14 @@ argument_list|,
 name|num_i
 argument_list|,
 literal|"-5"
+argument_list|,
+name|num_is
+argument_list|,
+literal|"-1"
+argument_list|,
+name|num_fs
+argument_list|,
+literal|"-1.5"
 argument_list|,
 name|super_s
 argument_list|,
@@ -5059,6 +5215,72 @@ operator|+
 literal|",count:1}]} "
 operator|+
 literal|"}"
+argument_list|)
+expr_stmt|;
+comment|// multi-valued integer
+name|client
+operator|.
+name|testJQ
+argument_list|(
+name|params
+argument_list|(
+name|p
+argument_list|,
+literal|"q"
+argument_list|,
+literal|"*:*"
+argument_list|,
+literal|"json.facet"
+argument_list|,
+literal|"{ "
+operator|+
+literal|" c1:'unique(${num_is})', c2:'hll(${num_is})'"
+operator|+
+literal|",f1:{${terms} type:terms, field:${num_is} }  "
+operator|+
+literal|"}"
+argument_list|)
+argument_list|,
+literal|"facets=={ count:6 "
+operator|+
+literal|", c1:5, c2:5"
+operator|+
+literal|", f1:{ buckets:[ {val:-1,count:2},{val:0,count:2},{val:3,count:2},{val:-5,count:1},{val:2,count:1}  ] } "
+operator|+
+literal|"} "
+argument_list|)
+expr_stmt|;
+comment|// multi-valued float
+name|client
+operator|.
+name|testJQ
+argument_list|(
+name|params
+argument_list|(
+name|p
+argument_list|,
+literal|"q"
+argument_list|,
+literal|"*:*"
+argument_list|,
+literal|"json.facet"
+argument_list|,
+literal|"{ "
+operator|+
+literal|" c1:'unique(${num_fs})', c2:'hll(${num_fs})'"
+operator|+
+literal|",f1:{${terms} type:terms, field:${num_fs} }  "
+operator|+
+literal|"}"
+argument_list|)
+argument_list|,
+literal|"facets=={ count:6 "
+operator|+
+literal|", c1:5, c2:5"
+operator|+
+literal|", f1:{ buckets:[ {val:-1.5,count:2},{val:0.0,count:2},{val:3.0,count:2},{val:-5.0,count:1},{val:2.0,count:1}  ] } "
+operator|+
+literal|"} "
 argument_list|)
 expr_stmt|;
 block|}
